[gd_scene load_steps=24 format=3 uid="uid://b42mgdyml5uru"]

[ext_resource type="PackedScene" uid="uid://hiprvc6egrh6" path="res://Scenes/default_enemy.tscn" id="1_caqst"]
[ext_resource type="Texture2D" uid="uid://bux51s47l0hss" path="res://Assets/Sprites/Dungeon_tileset/frames/imp_idle_anim_f0.png" id="2_2jlm0"]
[ext_resource type="Script" uid="uid://ba7plyd0nnofy" path="res://Scripts/imp/imp.gd" id="2_r6vll"]
[ext_resource type="Texture2D" uid="uid://do0i26iqywrsg" path="res://Assets/Sprites/Dungeon_tileset/frames/imp_idle_anim_f1.png" id="3_vkups"]
[ext_resource type="Texture2D" uid="uid://bburwrhiiveb4" path="res://Assets/Sprites/Dungeon_tileset/frames/imp_idle_anim_f2.png" id="4_f6pdk"]
[ext_resource type="Texture2D" uid="uid://cxej4gkxihuju" path="res://Assets/Sprites/Dungeon_tileset/frames/imp_idle_anim_f3.png" id="5_k7rgl"]
[ext_resource type="Texture2D" uid="uid://7av62mglgq81" path="res://Assets/Sprites/Dungeon_tileset/frames/imp_run_anim_f0.png" id="6_iddhe"]
[ext_resource type="Texture2D" uid="uid://btf0pdvxugdei" path="res://Assets/Sprites/Dungeon_tileset/frames/imp_run_anim_f1.png" id="7_hhqkt"]
[ext_resource type="Texture2D" uid="uid://d4a16pckgns15" path="res://Assets/Sprites/Dungeon_tileset/frames/imp_run_anim_f2.png" id="8_l8mfw"]
[ext_resource type="Texture2D" uid="uid://4vxeshiwjsvf" path="res://Assets/Sprites/Dungeon_tileset/frames/imp_run_anim_f3.png" id="9_r6vll"]
[ext_resource type="Script" uid="uid://dy7f5xy8df44m" path="res://Scripts/imp/Imp_Idle.gd" id="10_l8mfw"]
[ext_resource type="Script" uid="uid://bgytpumsrqrmt" path="res://Scripts/imp/Imp_Chase.gd" id="11_r6vll"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iddhe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2jlm0")
}, {
"duration": 1.0,
"texture": ExtResource("3_vkups")
}, {
"duration": 1.0,
"texture": ExtResource("4_f6pdk")
}, {
"duration": 1.0,
"texture": ExtResource("5_k7rgl")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_iddhe")
}, {
"duration": 1.0,
"texture": ExtResource("7_hhqkt")
}, {
"duration": 1.0,
"texture": ExtResource("8_l8mfw")
}, {
"duration": 1.0,
"texture": ExtResource("9_r6vll")
}],
"loop": true,
"name": &"Run",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iddhe"]

[sub_resource type="Animation" id="Animation_5nh8g"]
length = 0.571429
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_onr6d"]
length = 0.571429
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hcxa4"]
_data = {
&"Idle": SubResource("Animation_5nh8g"),
&"Run": SubResource("Animation_onr6d")
}

[sub_resource type="Animation" id="Animation_hcxa4"]
resource_name = "Hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2, 1.2), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ahwrf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wk5dn"]
_data = {
&"Hit": SubResource("Animation_hcxa4"),
&"RESET": SubResource("Animation_ahwrf")
}

[sub_resource type="Animation" id="Animation_iddhe"]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.5664]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_hhqkt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l8mfw"]
_data = {
&"Death": SubResource("Animation_iddhe"),
&"RESET": SubResource("Animation_hhqkt")
}

[node name="Imp" instance=ExtResource("1_caqst")]
script = ExtResource("2_r6vll")

[node name="AnimatedSprite2D" parent="." index="0"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_iddhe")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(2, 7)
shape = SubResource("RectangleShape2D_iddhe")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
&"": SubResource("AnimationLibrary_hcxa4")
}

[node name="DamagePlayer" parent="." index="3"]
libraries = {
&"": SubResource("AnimationLibrary_wk5dn")
}

[node name="DeathPlayer" parent="." index="4"]
libraries = {
&"": SubResource("AnimationLibrary_l8mfw")
}

[node name="StateMachine" parent="." index="5" node_paths=PackedStringArray("initial_state")]
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine" index="0"]
script = ExtResource("10_l8mfw")

[node name="Chase" type="Node2D" parent="StateMachine" index="1"]
script = ExtResource("11_r6vll")
